[package]
name = "donut-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.scroll]
version = "0.10"
default_features = false

[features]
std = ["alloc", "scroll/std"]
alloc = ["scroll/derive"]

[dependencies]
argh = "0.1"
byteorder = "1.4"
chaskey = { git = "https://github.com/sacundim/chaskey", branch = "master" }
goblin = "0.4"
plain = "0.2.3"
rand = { version = "0.4", features = ["i128_support"] }
uuid = { version = "0.8", features = ["v4"] }
